Cambios: * Intenté mejorar los estilos pero fallé miserablemente jaja, lo dejé hardcodeado. * Agregué el fragmento de configuraciones, falta programarlo, para poder agregar o quitar la autenticacion por huella digital. * Los precios de referencia funcionan bien y se pueden cambiar haciendo un PUT desde postman. *Se acomodó el código en el main activity, se agregó la función de detectar la huella, se añadieron algunos comentarios.
Lo que sigue:
*Terminar de ajustar algunas cosas como los textos hardcodeados.
*Añadir dos o tres configuraciones.

--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/txtDolarTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dólar Oficial"
+                android:text="@string/d_lar_oficial"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -35,19 +35,19 @@
                 android:id="@+id/txtDolarCompra"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Compra: -" />
+                android:text="@string/compra" />
 
             <TextView
                 android:id="@+id/txtDolarVenta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Venta: -" />
+                android:text="@string/venta" />
 
             <TextView
                 android:id="@+id/txtDolarFecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Actualizado: -"
+                android:text="@string/actualizado"
                 android:textSize="12sp" />
 
         </LinearLayout>
