--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,17 +32,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Escribe un mensaje" />
+            android:autofillHints=""
+            android:hint="@string/escribe_un_mensaje"
+            android:inputType="textMultiLine"
+            android:minHeight="48dp"
+            tools:ignore="VisualLintTextFieldSize" />
 
         <ImageButton
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="boton enviar mensaje"
+            android:contentDescription="@string/boton_enviar_mensaje"
             android:minWidth="48dp"
             android:minHeight="48dp"
-            android:src="@drawable/ic_send_24dp"/>
+            android:src="@drawable/ic_send_24dp"
+            app:tint="?attr/colorOnSurface" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
