--- a/app/src/main/res/layout/fragment_precios.xml
+++ b/app/src/main/res/layout/fragment_precios.xml
@@ -17,7 +17,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/quantum_grey"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerIngenieria"
@@ -26,7 +28,9 @@
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/txtTitulo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
+        />
 
     <TextView
         android:id="@+id/txtOtros"
@@ -37,7 +41,9 @@
         android:textStyle="bold"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/recyclerIngenieria"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/quantum_grey"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerOtros"
@@ -46,6 +52,8 @@
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/txtOtros"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
