--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -6,18 +6,21 @@
     android:padding="16dp">
 
     <!-- Botón Volver (arriba izquierda) -->
+
+    <!-- Cronómetro centrado en el medio -->
     <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/back"
         android:src="@drawable/ic_flecha_volver_24dp"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/darker_gray" />
 
-    <!-- Cronómetro centrado en el medio -->
     <Chronometer
         android:id="@+id/tvTimer"
         android:layout_width="wrap_content"
@@ -26,7 +29,7 @@
         android:layout_centerVertical="true"
         android:text="00:00"
         android:textSize="36sp"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/darker_gray" />
 
     <!-- Controles Pausa / Reanudar / Stop -->
     <LinearLayout
@@ -48,7 +51,7 @@
             android:background="@null"
             android:enabled="false"
             android:visibility="gone"
-            app:tint="@android:color/white" />
+            app:tint="@android:color/darker_gray" />
 
         <ImageButton
             android:id="@+id/btnResume"
@@ -58,7 +61,7 @@
             android:contentDescription="@string/resume"
             android:background="@null"
             android:visibility="gone"
-            app:tint="@android:color/white" />
+            app:tint="@android:color/darker_gray" />
 
         <ImageButton
             android:id="@+id/btnStop"
@@ -68,7 +71,7 @@
             android:contentDescription="@string/stop"
             android:background="@null"
             android:visibility="gone"
-            app:tint="@android:color/white" />
+            app:tint="@android:color/darker_gray" />
 
     </LinearLayout>
 
@@ -83,6 +86,6 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/record"
         android:src="@drawable/ic_record"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/darker_gray" />
 
 </RelativeLayout>
